quick fix for scrollbars. notify me of any issues that arise

--- a/components/MainApp.css
+++ b/components/MainApp.css
@@ -75,6 +75,27 @@
   visibility: hidden !important;
 }
 
+.scroller-wrap.dark .scroller::-webkit-scrollbar-thumb,
+.pc-scrollerWrap .scroller::-webkit-scrollbar-thumb,
+.pc-scroller::-webkit-scrollbar-thumb {
+  background-color: white !important;
+  border-radius: 0 !important;
+}
+
+.pc-tabBarContainer,  [class*='scroller']::-webkit-scrollbar-thumb, [class*='scroller']::-webkit-scrollbar-track-piece {
+  border: none
+}
+
 .pc-scrollerWrap .scroller::-webkit-scrollbar {
   width: 5px;
+}
+
+
+.theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-track-piece {
+  visibility: hidden !important;
+}
+
+.scroller-wrap.dark .scroller::-webkit-scrollbar, .pc-scrollerWrap .scroller::-webkit-scrollbar,
+.pc-scroller::-webkit-scrollbar {
+  width: 5px !important;
 }
